--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,12 @@
-name: 'git-ftp-action'
-author: 'Sebastian Popp <git-ftp-action@sebastianpopp.com>'
-description: 'Uses git-ftp and GitHub actions to deploy a GitHub repository to a FTP server.'
+name: 'git-sftp-action'
+author: 'Henner Setyono <henner@setyono.net>'
+description: 'Uses git-ftp and GitHub actions to deploy a GitHub repository to an SFTP server.'
 inputs:
   url:
     description: 'URL'
     required: true
   user:
     description: 'FTP login name'
-    required: true
-  password:
-    description: 'FTP password'
     required: true
   syncroot:
     description: 'Specifies a local directory to sync from as if it were the git project root path.'
